--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,32 @@
-astroid==2.4.2
-beautifulsoup4==4.9.3
-blinker==1.4
-bs4==0.0.1
-certifi==2020.12.5
-chardet==3.0.4
-click==7.1.2
-colorama==0.4.4
-et-xmlfile==1.0.1
-Flask==1.1.2
-Flask-Mail==0.9.1
-idna==2.10
-isort==5.6.4
-itsdangerous==1.1.0
-jdcal==1.4.1
-Jinja2==2.11.2
-lazy-object-proxy==1.4.3
-lxml==4.6.2
-MarkupSafe==1.1.1
-mccabe==0.6.1
-numpy==1.19.3
-openpyxl==3.0.5
-pandas==1.1.5
-pylint==2.6.0
-python-dateutil==2.8.1
-pytz==2020.4
-requests==2.25.0
-selenium==3.141.0
-six==1.15.0
-soupsieve==2.1
-toml==0.10.2
-urllib3==1.26.2
-Werkzeug==1.0.1
-wrapt==1.12.1
+astroid
+beautifulsoup4
+blinker
+bs4
+certifi
+chardet
+click
+colorama
+et-xmlfile
+idna
+isort
+itsdangerous
+jdcal
+Jinja2
+lazy-object-proxy
+lxml
+MarkupSafe
+mccabe
+numpy
+openpyxl
+pandas
+pylint
+python-dateutil
+pytz
+requests
+selenium
+six
+soupsieve
+toml
+urllib3
+Werkzeug
+wrapt
